# rgb-ldk-cli-public

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
crates/api/: Cargo.toml
crates/api/src/: http.rs  lib.rs
crates/cli/: Cargo.toml  EXAMPLE.md  README.md  docker-compose.yaml
crates/cli/src/: cli.rs  client.rs  config.rs  main.rs  ui.rs  utils.rs
docs/: README.md  SUMMARY.md  contributing.md
docs/api/: README.md  http-api.md  integration-patterns.md
docs/cli/: README.md  commands.md  examples.md
docs/concepts/: architecture.md  events-ack-model.md  health-readiness.md  identifiers.md
docs/getting-started/: docker.md  local-binary.md  regtest.md
docs/ops/: logging-observability.md
docs/releases/: versioning.md
docs/security/: README.md  threat-model.md
docs/troubleshooting/: README.md
docs/tutorials/: consume-events.md  open-a-channel.md  receive-a-payment.md  send-a-payment.md
sdk/: README.md  client.ts  package-lock.json  package.json  tsconfig.json  types.ts
